--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="fill_all_input">Fill all input fields!</string>
 
     <string name="select_activity_type">Select activity type</string>
+    <string name="title_activity_gps_exercise_viewer">Map</string>
 
 
 </resources>
